# iwtbi

./: .env.example  .gitignore  CHANGELOG.md  IWTBI_ANALYSIS.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  worker.py
backend/app/agents/: api_agent.py  architecture.py  base.py  database.py  devops.py  frontend_agent.py  logic.py  stack.py  synthesizer.py
backend/app/database/: analyses_repo.py  notifications_repo.py  postgres_client.py  schema.py  subscriptions_store.py  supabase_client.py
backend/app/models/: job.py  repo_context.py
backend/app/routes/: analyze.py  biblioteca.py  health.py  preflight.py  stream.py  subscriptions.py  ticket.py
backend/app/services/: analysis_tags.py  email_service.py  file_reader.py  git_cloner.py  github_api.py  llm_profiles.py  orchestrator.py  repo_preflight.py  request_meta.py  (+1 more)
backend/postgres/: schema.sql
backend/supabase/: schema.sql
backend/tests/: test_agent_identity.py  test_analyses_repo.py  test_analysis_tags.py  test_base_agent.py  test_file_reader.py  test_git_cloner.py  test_github_api.py  test_job_store.py  test_llm_profiles.py  test_main_security.py  test_models.py  test_notifications_repo.py  test_orchestrator.py  test_postgres_schema.py  test_redis_job_store.py  test_repo_preflight.py  test_request_meta.py  test_routes.py  test_stream_route.py  test_subscriptions_store.py  test_synthesizer.py  test_ticket_route.py  test_ticket_store.py  test_unsubscribe_tokens.py
(+45 files in other folders)
